Make play-during a true shorthand so it gets parsed correctly after the nsCSSDeclaration storage rewrite.  b=223718  r+sr=bzbarsky